--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <br>
 <a href="https://twitter.com/nyannrou"><img src="Twitter.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  TwitterはYouTub情報や日常的なtweetもします。</span></font></form><br>
 <br>
+<a href="https://nyannrou.github.io/nyannrou3/"><img src="sonota.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  その他色々あります。</span></font></form><br>
+<br>
 <a href="https://discord.gg/6MZshApj6A"><img src="Discord.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  Discordは雑談などを楽しむ場所です。</span></font></form><br>
 </details>
 <h3><center>利用者はお読みください。</center></h3><br>
