--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>にゃん狼・公式</title>
+<title>幼使こねこ・公式</title>
 <link rel="icon" href="nyannrou.ico">
 </head>
 <body background="nyannrou.png">
 
-<h1><center>にゃん狼・BAN情報</center></h1>
+<h1><center>幼使こねこ・BAN情報</center></h1>
 <details>
 <summary><img src="nyannrou_menyuu.png" alt="あれ？"></summary><br>
 <a href="https://nyannrou.github.io/nyannrou/"><img src="nyannrou_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  トップページへ戻ります。</span></font></form><br>
@@ -48,7 +48,7 @@
 </tr>
 </table></center><br>
 <br>
-<h4><center>編集者・にゃん狼</center></h4><br>
+<h4><center>編集者・幼使こねこ   幼使こねこ公式サイト</center></h4><br>
 
 </body>
 </html>
