--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 <a href="https://www.youtube.com/channel/UCOZwqg3ftdCyjJkOB37bX1Q"><img src="YouTub.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  YouTubは主に、Minecraftやゲームをやっています。</span></font></form><br>
 <br>
-<a href="https://twitter.com/nyannrou"><img src="Twitter.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  TwitterはYouTub情報や日常的なtweetもします。</span></font></form><br>
+<a href="https://twitter.com/YoutukaKoneko"><img src="Twitter.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  TwitterはYouTub情報や日常的なtweetもします。</span></font></form><br>
 <br>
 <a href="https://nyannrou.github.io/nyannrou3/"><img src="sonota.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  その他色々あります。</span></font></form><br>
 <br>
