--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
 </head>
 <body background="nyannrou.png">
 
-<h1><center>街使こねこ・BAN情報</center></h1>
+<h1><center><span style="background-color:white">街使こねこ・BAN情報</span></center></h1>
 <details>
 <summary><img src="nyannrou_menyuu.png" alt="あれ？"></summary><br>
-<a href="https://nyannrou.github.io/nyannrou/"><img src="nyannrou_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  トップページへ戻ります。</span></font></form><br>
+<a href="https://matituka.github.io/top/"><img src="nyannrou_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  トップページへ戻ります。</span></font></form><br>
 <br>
-<a href="https://www.youtube.com/channel/UCOZwqg3ftdCyjJkOB37bX1Q"><img src="YouTub.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  YouTubは主に、Minecraftやゲームをやっています。</span></font></form><br>
+<a href="https://www.youtube.com/channel/UCQjpZ8Ezw3j8XU_XArT04Vg"><img src="YouTub.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  YouTubは主に、Minecraftやゲームをやっています。</span></font></form><br>
 <br>
-<a href="https://twitter.com/YoutukaKoneko"><img src="Twitter.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  TwitterはYouTub情報や日常的なtweetもします。</span></font></form><br>
+<a href="https://twitter.com/matituka_koneko"><img src="Twitter.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  TwitterはYouTub情報や日常的なtweetもします。</span></font></form><br>
 <br>
-<a href="https://nyannrou.github.io/nyannrou3/"><img src="sonota.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  その他色々あります。</span></font></form><br>
+<a href="https://https://matituka.github.io/konekotyan_top/"><img src="konekotyan_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  コネコちゃんページ</span></font></form><br>
 <br>
 <a href="https://discord.gg/6MZshApj6A"><img src="Discord.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  Discordは雑談などを楽しむ場所です。</span></font></form><br>
 </details>
-<h3><center>利用者はお読みください。</center></h3><br>
-<h3><center>このページは「 BANされたプレイヤー 」を記載しています。</center></h3><br>
-<h3><center>BANされた理由や今後の荒らし対策にご利用ください。</center></h3>
-<h4><center>※戻る場所はメニューへ！</center></h4>
+<h3><center><span style="background-color:white">利用者はお読みください。</span></center></h3><br>
+<h3><center><span style="background-color:white">このページは「 BANされたプレイヤー 」を記載しています。</span></center></h3><br>
+<h3><center><span style="background-color:white">BANされた理由や今後の荒らし対策にご利用ください。</span></center></h3>
+<h3><center><span style="background-color:white">ワールドは荒らし禁止です。<a href="https://matituka.github.io/top/">利用規約</a>をご覧ください。</span></center></h3>
+<h4><center><span style="background-color:white">※戻る場所はメニューへ！</span></center></h4>
 <br>
-<h3><center>BANされたプレイヤー</center></h3><br>
+<h2><center><span style="background-color:white">BANされたプレイヤー</span></center></h2><br>
 <br>
 <center><table border="1" width="1000" height="50">
 <tr>
