--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <title>街使こねこ・公式</title>
-<link rel="icon" href="nyannrou.ico">
+<link rel="icon" href="matituka.ico">
 </head>
-<body background="nyannrou.png">
+<body background="matituka.png">
 
 <h1><center><span style="background-color:white">街使こねこ・BAN情報</span></center></h1>
 <details>
