--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>街使こねこ・公式</title>
+<title>こねこprojec・公式サイト</title>
 <link rel="icon" href="matituka.ico">
 </head>
 <body background="matituka.png">
 
-<h1><center><span style="background-color:white">街使こねこ・BAN情報</span></center></h1>
+<h1><center><span style="background-color:white">こねこP・BAN情報</span></center></h1>
 <details>
 <summary><img src="nyannrou_menyuu.png" alt="あれ？"></summary><br>
 <a href="https://matituka.github.io/top/"><img src="nyannrou_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  トップページへ戻ります。</span></font></form><br>
@@ -21,7 +21,7 @@
 <h3><center><span style="background-color:white">利用者はお読みください。</span></center></h3><br>
 <h3><center><span style="background-color:white">このページは「 BANされたプレイヤー 」を記載しています。</span></center></h3><br>
 <h3><center><span style="background-color:white">BANされた理由や今後の荒らし対策にご利用ください。</span></center></h3>
-<h3><center><span style="background-color:white">ワールドは荒らし禁止です。<a href="https://matituka.github.io/top/">利用規約</a>をご覧ください。</span></center></h3>
+<h3><center><span style="background-color:white">基本的に荒らし禁止です。<a href="https://matituka.github.io/top/">利用規約</a>をご覧ください。</span></center></h3>
 <h4><center><span style="background-color:white">※戻る場所はメニューへ！</span></center></h4>
 <br>
 <h2><center><span style="background-color:white">BANされたプレイヤー</span></center></h2><br>
@@ -49,7 +49,7 @@
 </tr>
 </table></center><br>
 <br>
-<h4><center>編集者・街使こねこ   街使こねこ公式サイト</center></h4><br>
+<h4><center><span style="background-color:#6b6b6a">こねこP公式サイト編集部  2023 - </span></center></h4><br>
 
 </body>
 </html>
