--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
 <body background="matituka.png">
 
 <h1><center><span style="background-color:white">こねこP・BAN情報</span></center></h1>
-<details>
-<summary><img src="nyannrou_menyuu.png" alt="あれ？"></summary><br>
-<a href="https://matituka.github.io/top/"><img src="nyannrou_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  トップページへ戻ります。</span></font></form><br>
-<br>
-<a href="https://www.youtube.com/channel/UCQjpZ8Ezw3j8XU_XArT04Vg"><img src="YouTub.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  YouTubは主に、Minecraftやゲームをやっています。</span></font></form><br>
-<br>
-<a href="https://twitter.com/matituka_koneko"><img src="Twitter.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  TwitterはYouTub情報や日常的なtweetもします。</span></font></form><br>
-<br>
-<a href="https://discord.gg/6MZshApj6A"><img src="Discord.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  Discordは雑談などを楽しむ場所です。</span></font></form><br>
-<br>
-<a href="https://https://matituka.github.io/konekotyan_top/"><img src="konekotyan_top.png" alt="あれ？"></a><font color="">　　<span style="background-color:fuchsia">  コネコちゃんページ</span></font></form><br>
-</details>
+<font size="6">★　ＭＥＮＵ　★　</font><a href="https://konekoP.github.io/top/"><img src="modoru.png" alt="あれ？"></a><br>
+<a href="https://konekoP.github.io/youtube/"><img src="YouTub.png" alt="あれ？"></a><br>
+<a href="https://konekoP.github.io/twitter_X/"><img src="Twitter.png" alt="あれ？"></a><br>
+<a href="https://discord.gg/6MZshApj6A"><img src="Discord.png" alt="あれ？"></a><br>
+<a href="https://konekoP.github.io/konekotyan_top/"><img src="konekotyan_top.png" alt="あれ？"></a><br>
+<a href="https://konekoP.github.io/mcban/"><img src="mcban.png" alt="あれ？"></a><br>
+<a href="https://konekoP.github.io/mcaddon/"><img src="mcaddon.png" alt="あれ？"></a><br>
+
 <h3><center><span style="background-color:white">利用者はお読みください。</span></center></h3><br>
 <h3><center><span style="background-color:white">このページは「 BANされたプレイヤー 」を記載しています。</span></center></h3><br>
 <h3><center><span style="background-color:white">BANされた理由や今後の荒らし対策にご利用ください。</span></center></h3>
