--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <title>こねこprojec・公式サイト</title>
-<link rel="icon" href="matituka.ico">
+<link rel="icon" href="KonekoP.ico">
 </head>
-<body background="matituka.png">
+<body background="xxxx.png">
 
 <h1><center><span style="background-color:white">こねこP・BAN情報</span></center></h1>
 <font size="6">★　ＭＥＮＵ　★　</font><a href="https://konekoP.github.io/top/"><img src="modoru.png" alt="あれ？"></a><br>
