--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>こねこprojec・公式サイト</title>
 <link rel="icon" href="KonekoP.ico">
 </head>
-<body background="xxxx.png">
+<body bgcolor="#c9c9c9" background="xxxx.png">
 
 <h1><center><span style="background-color:white">こねこP・BAN情報</span></center></h1>
 <font size="6">★　ＭＥＮＵ　★　</font><a href="https://konekoP.github.io/top/"><img src="modoru.png" alt="あれ？"></a><br>
