--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h3><center><span style="background-color:white">利用者はお読みください。</span></center></h3><br>
 <h3><center><span style="background-color:white">このページは「 BANされたプレイヤー 」を記載しています。</span></center></h3><br>
 <h3><center><span style="background-color:white">BANされた理由や今後の荒らし対策にご利用ください。</span></center></h3>
-<h3><center><span style="background-color:white">基本的に荒らし禁止です。<a href="https://matituka.github.io/top/">利用規約</a>をご覧ください。</span></center></h3>
+<h3><center><span style="background-color:white">基本的に荒らし禁止です。<a href="https://konekop.github.io/top/">利用規約</a>をご覧ください。</span></center></h3>
 <h4><center><span style="background-color:white">※戻る場所はメニューへ！</span></center></h4>
 <br>
 <h2><center><span style="background-color:white">BANされたプレイヤー</span></center></h2><br>
