--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </tr>
 </table></center><br>
 <br>
-<h4><center><span style="background-color:white">こねこP公式サイト編集部  2023 - </span></center></h4><br>
+<h4><center><span style="background-color:white">こねこP公式サイト編集部  2023 - 2024</span></center></h4><br>
 
 </body>
 </html>
