--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
 <h1><center><span style="background-color:white">こねこP・BAN情報</span></center></h1>
 <font size="6">★　ＭＥＮＵ　★　</font><a href="https://konekoP.github.io/top/"><img src="modoru.png" alt="あれ？"></a><br>
-<a href="https://konekoP.github.io/youtube/"><img src="YouTub.png" alt="あれ？"></a><a href="https://konekoP.github.io/twitter_X/"><img src="Twitter.png" alt="あれ？"></a><br>
-<a href="https://discord.gg/6MZshApj6A"><img src="Discord.png" alt="あれ？"></a><a href="https://konekoP.github.io/konekotyan_top/"><img src="konekotyan_top.png" alt="あれ？"></a><br>
-<a href="https://konekoP.github.io/mcban/"><img src="mcban.png" alt="あれ？"></a><a href="https://konekoP.github.io/mcaddon/"><img src="mcaddon.png" alt="あれ？"></a><br>
+<a href="https://konekoP.github.io/youtube/"><img src="YouTub.png" alt="あれ？"></a>
+<a href="https://konekoP.github.io/twitter_X/"><img src="Twitter.png" alt="あれ？"></a>
+<a href="https://discord.gg/6MZshApj6A"><img src="Discord.png" alt="あれ？"></a>
+<a href="https://konekoP.github.io/konekotyan_top/"><img src="konekotyan_top.png" alt="あれ？"></a>
+<a href="https://konekoP.github.io/mcban/"><img src="mcban.png" alt="あれ？"></a>
+  <a href="https://konekoP.github.io/mcaddon/"><img src="mcaddon.png" alt="あれ？"></a><br>
 
 <h3><center><span style="background-color:white">利用者はお読みください。</span></center></h3><br>
 <h3><center><span style="background-color:white">このページは「 BANされたプレイヤー 」を記載しています。</span></center></h3><br>
