--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="#c9c9c9" background="xxxx.png">
 
-<h1><center><span style="background-color:white">こねこP・BAN情報</span></center></h1>
+<h1><center><span style="background-color:white">キャラ素材ダウンロード</span></center></h1>
 <font size="6">★　ＭＥＮＵ　★　</font><a href="https://konekoP.github.io/top/"><img src="modoru.png" alt="あれ？"></a><br>
 <a href="https://konekoP.github.io/youtube/"><img src="YouTub.png" alt="あれ？"></a>
 <a href="https://konekoP.github.io/twitter_X/"><img src="Twitter.png" alt="あれ？"></a>
@@ -14,13 +14,13 @@
 <a href="https://konekoP.github.io/mcban/"><img src="mcban.png" alt="あれ？"></a>
   <a href="https://konekoP.github.io/mcaddon/"><img src="mcaddon.png" alt="あれ？"></a><br>
 
-<h3><center><span style="background-color:white">利用者はお読みください。</span></center></h3><br>
-<h3><center><span style="background-color:white">このページは「 BANされたプレイヤー 」を記載しています。</span></center></h3><br>
-<h3><center><span style="background-color:white">BANされた理由や今後の荒らし対策にご利用ください。</span></center></h3>
-<h3><center><span style="background-color:white">基本的に荒らし禁止です。<a href="https://konekop.github.io/top/">利用規約</a>をご覧ください。</span></center></h3>
-<h4><center><span style="background-color:white">※戻る場所はメニューへ！</span></center></h4>
+<h2><center><span style="background-color:white">使用の注意点</span></center></h2><br>
+<h3><center><span style="background-color:white">2時配布は禁止です。</span></center></h3><br>
+<h3><center><span style="background-color:white">キャラ素材はYouTube・ニコニコ動画で使用できます。</span></center></h3>
+<h4><center><span style="background-color:white">※概要欄にはここのリンクをお願いします。</span></center></h4>
 <br>
-<h2><center><span style="background-color:white">BANされたプレイヤー</span></center></h2><br>
+<h3><center><span style="background-color:white"><a href="https://konekop.github.io/top/">菜奈ちゃん</a></span></center></h3>
+<h2><center><span style="background-color:white">キャラ素材</span></center></h2><br>
 <br>
 <center><table border="1" width="1000" height="50">
 <tr>
