--- a/index.html
+++ b/index.html
@@ -19,29 +19,38 @@
 <h3><center><span style="background-color:white">キャラ素材はYouTube・ニコニコ動画で使用できます。</span></center></h3>
 <h4><center><span style="background-color:white">※概要欄にはここのリンクをお願いします。</span></center></h4>
 <br>
-<h3><center><span style="background-color:white"><a href="https://konekop.github.io/top/">菜奈ちゃん</a></span></center></h3>
 <h2><center><span style="background-color:white">キャラ素材</span></center></h2><br>
 <br>
 <center><table border="1" width="1000" height="50">
 <tr>
-<th>BAN者スキン＆画像</th>
-<th>BAN者ネーム＆タグ</th>
-<th>BANされた理由</th>
+<th>キャラ名</th>
+<th>キャラ画像</th>
+<th>制作者</th>
 </tr>
 <tr>
-<th>NO.png</th>
+<th><img src="modoru.png" alt="あれ？"></th>
 <th>NO_ID</th>
-<th>記録がありません。</th>
+<th><a href="https://konekop.github.io/top/">菜奈ちゃん</a></th>
 </tr>
 <tr>
+<th>誰？</th>
 <th>NO.png</th>
-<th>NO_ID</th>
-<th>記録がありません。</th>
+<th>不明</th>
 </tr>
 <tr>
+<th>誰？</th>
 <th>NO.png</th>
-<th>NO_ID</th>
-<th>記録がありません。</th>
+<th>不明</th>
+</tr>
+<tr>
+<th>誰？</th>
+<th>NO.png</th>
+<th>不明</th>
+</tr>
+<tr>
+<th>誰？</th>
+<th>NO.png</th>
+<th>不明</th>
 </tr>
 </table></center><br>
 <br>
