--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <th>制作者</th>
 </tr>
 <tr>
-<th><img src="modoru.png" alt="あれ？"></th>
-<th>NO_ID</th>
-<th><a href="https://konekop.github.io/top/">菜奈ちゃん</a></th>
+<th></th>
+<th><img src="nekotyan.png" width="150" height="250" alt="あれ？"></th>
+<th><a href="hhttps://twitter.com/sainatyan">菜奈ちゃん</a></th>
 </tr>
 <tr>
 <th>誰？</th>
