--- a/index.html
+++ b/index.html
@@ -26,31 +26,45 @@
 <th>キャラ名</th>
 <th>キャラ画像</th>
 <th>制作者</th>
+<th>ダウンロード</th>
 </tr>
 <tr>
-<th></th>
+<th>猫ちゃん(桃色)</th>
 <th><img src="nekotyan.png" width="150" height="250" alt="あれ？"></th>
 <th><a href="hhttps://twitter.com/sainatyan">菜奈ちゃん</a></th>
+<th><!DOCTYPE html>
+  <html lang="ja">
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>Document</title>
+    </head>
+    <body>
+      <a href="./猫ちゃん(桃色)立ち絵 v1.0.zip" download="猫ちゃん(桃色)立ち絵 v1.0.zip"><input type="submit" value="⇩Download"></a></th>
 </tr>
 <tr>
 <th>誰？</th>
 <th>NO.png</th>
 <th>不明</th>
+<th>不可能</th>
 </tr>
 <tr>
 <th>誰？</th>
 <th>NO.png</th>
 <th>不明</th>
+<th>不可能</th>
 </tr>
 <tr>
 <th>誰？</th>
 <th>NO.png</th>
 <th>不明</th>
+<th>不可能</th>
 </tr>
 <tr>
 <th>誰？</th>
 <th>NO.png</th>
 <th>不明</th>
+<th>不可能</th>
 </tr>
 </table></center><br>
 <br>
