--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </tr>
 <tr>
 <th>猫ちゃん(桃色)</th>
-<th><img src="nekotyan.png" width="150" height="250" alt="あれ？"></th>
+<th><img src="nekotyan1.png" width="50" height="150" alt="あれ？"><img src="nekotyan2.png" width="50" height="150" alt="あれ？"></th>
 <th><a href="hhttps://twitter.com/sainatyan">菜奈ちゃん</a></th>
 <th><!DOCTYPE html>
   <html lang="ja">
